# zkvm-compiler-optimizations

./: .gitignore  Cargo.toml  Pipfile  README.md  bench.sh  build.sh  config.json  pyproject.toml  run.py  run.sh  setup.sh  zkbench.sh
configs/: tune.json
configs/tune/: all-passes-o3-codegen.json  all-passes-prepopulate.json  all-passes.json  all-rsp.json  all.json  flags-only.json  top10-abs-prove-time.json  top15-abs-cycle-count.json  top20-cycle-count.json
docs/: llvm.md  plotting.md
docs/llvm/: subtractive-flags.patch
docs/rsp/: README.md
euler/: build.sh  load_modules.sh
inputs/spec-631/: in.txt
programs/: sloc.md
programs/bigmem/: Cargo.toml
programs/bigmem/src/: lib.rs  main.rs
programs/c/: .gitignore  Cargo.toml  Makefile  build.rs
programs/c-build/: Makefile
programs/c-build/src/: lib.rs
programs/c-platform/: Cargo.toml
programs/c-platform/include/: zkvm.h
programs/c-platform/src/: lib.rs
programs/c-sample/guest/: main.c
programs/c-sample/host/: Cargo.toml
programs/c-tools/: build_tools.rs
programs/c/src/: hello.c  main.rs
programs/example/: Cargo.toml
programs/example/src/: lib.rs  main.rs
programs/fibonacci/: Cargo.toml  REAMDE.md
programs/inline/: Cargo.toml
programs/inline/src/: lib.rs  main.rs
programs/instruction-selection/: Cargo.toml
programs/keccak256-risc0/: Cargo.toml
programs/keccak256-sp1/: Cargo.toml
programs/keccak256-x86/: Cargo.toml
programs/keccak256-x86/src/: lib.rs
programs/loop-sum/: Cargo.toml
programs/loop-unroll/: Cargo.toml
programs/npb-ft/: Cargo.toml  README.md
programs/npb-ft/src/: main.rs
programs/npb-mg/: Cargo.toml  README.md  build.rs
programs/npb-sp/: Cargo.toml  README.md
programs/polybench/: README.md
programs/polybench-2mm/: Cargo.toml
programs/polybench-3mm/: Cargo.toml
programs/polybench-3mm/src/: lib.rs  main.rs
programs/polybench-adi/: Cargo.toml
programs/polybench-adi/src/: lib.rs
programs/polybench-atax/: Cargo.toml
programs/polybench-bicg/: Cargo.toml
programs/polybench-cholesky/: Cargo.toml
programs/polybench-correlation/: Cargo.toml
programs/polybench-covariance/: Cargo.toml
programs/polybench-deriche/: Cargo.toml
programs/polybench-doitgen/: Cargo.toml
programs/polybench-durbin/: Cargo.toml
programs/polybench-fdtd-2d/: Cargo.toml
programs/polybench-floyd-warshall/: Cargo.toml
programs/polybench-gemm/: Cargo.toml
programs/polybench-gemver/: Cargo.toml
programs/polybench-gesummv/: Cargo.toml
programs/polybench-gramschmidt/: Cargo.toml
programs/polybench-heat-3d/: Cargo.toml
programs/polybench-jacobi-1d/: Cargo.toml
programs/polybench-jacobi-1d/src/: lib.rs  main.rs
programs/polybench-jacobi-2d/: Cargo.toml
programs/polybench-lu/: Cargo.toml
programs/polybench-ludcmp/: Cargo.toml
programs/polybench-ludcmp/src/: lib.rs  main.rs
programs/polybench-mvt/: Cargo.toml
programs/polybench-nussinov/: Cargo.toml
programs/polybench-seidel-2d/: Cargo.toml
programs/polybench-symm/: Cargo.toml
programs/polybench-syr2k/: Cargo.toml
programs/polybench-syrk/: Cargo.toml
programs/polybench-trisolv/: Cargo.toml
programs/polybench-trmm/: Cargo.toml
programs/regex-match/: Cargo.toml
programs/regex-match/src/: lib.rs  main.rs
programs/rsp-risc0/: Cargo.toml  REAMDE.md
programs/rsp-sp1/: Cargo.toml
programs/rsp-sp1/src/: main.rs
programs/rsp-x86/: Cargo.toml
programs/rsp-x86/src/: lib.rs
programs/sha2/: Cargo.toml
programs/sha2-chain/: Cargo.toml
programs/sha3/: Cargo.toml
programs/sha3-bench/: Cargo.toml
programs/sha3-bench/src/: lib.rs  main.rs
programs/sha3-chain/: Cargo.toml
programs/spec-600/: Cargo.toml  Makefile
programs/spec-605/: Makefile
programs/spec-619/: Makefile
programs/spec-631/: Makefile
programs/spec-631/host/: Cargo.toml  build.rs
programs/spec-631/host/src/: main.rs
programs/tailcall/: Cargo.toml
programs/zkvm-mnist/: Cargo.toml
programs/zkvm-mnist/src/: lib.rs  main.rs
results/: .gitignore
results/crypto/: ecdsa-verify-risc0-stats.json  merkle-risc0-stats.json  sha2-bench-sp1-stats.json  sha2-chain-risc0-stats.json  sha2-chain-sp1-stats.json  sha256-risc0-stats.json  sha256-sp1-stats.json  sha3-bench-risc0-stats.json  sha3-chain-sp1-stats.json
results/docs/: README.md
results/llvm/: .gitignore  instrcosts-with-inline.patch  instrcosts.patch
runner/: Cargo.toml
runner/benches/: bench_main.rs
runner/benches/benchmarks/: mod.rs  risc0.rs  risc0_utils.rs  sp1.rs  sp1_utils.rs  utils.rs
runner/src/: input.rs  lib.rs  main.rs  report_risc0.rs  report_sp1.rs  risc0.rs  risc0_rv32im.rs  sp1.rs  tune.rs  types.rs  utils.rs
runner/src/bench/: bench_utils.rs  mod.rs  risc0_utils.rs  sp1_utils.rs  utils.rs  x86_utils.rs
runner/src/cputime/: formatter.rs  mod.rs  time.rs
scripts/: build_with_profiling.sh  eval.py
scripts/euler/: build_job.sh  chmod.sh  run.sh  run40.sh  run80.sh  run_interactive.sh  run_interactive_gpu.sh  run_no_gpu.sh  run_with_config.py  run_with_config.sh
sp1-cuda/: Cargo.toml  README.md
sp1-cuda/src/: lib.rs
sp1-cuda/src/proto/: api.rs
zkbench/: __main__.py  asm.py  bench.py  build.py  clean.py  common.py  config.py  run.py  tune.py
zkbench/plot/: average_by_profile.py  average_duration.py  average_improvement.py  average_improvement_compare.py  average_improvement_difference.py  average_improvement_zkvm.py  average_khz.py  better_worse.py  binary_size_duration.py  common.py  cycle_count.py  cycle_count_abs.py  cycle_count_by_program.py  cycle_count_by_program_zkvm.py  cycle_count_duration.py  cycle_prove_duration.py  duration.py  duration_by_program.py  duration_single_program.py  export.py  genetic.py  improvement_by_program.py  improvement_by_program_exec.py  improvement_by_program_zkvm.py  improvement_programs.py  improvement_single_program.py  metric_overview.py  no_effect.py  opt_by_program.py  opt_no_effect.py  paging_by_profile.py  plot.py  prove_exec.py  rca_classify.py  stddev.py  total_time_by_profile.py  x86_exec.py
zkbench/tune/: common.py  exhaustive.py  ffd.py  genetic.py  runner.py  tune.py
(+1833 files in other folders)
