[project]
name = "zkbench"
version = "0.1.0"
description = "benchmarking impact of compiler optimizations on zkVMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.8",
    "dacite>=1.9.2",
    "matplotlib>=3.10.1",
    "mdutils>=1.6.0",
    "numpy>=2.2.4",
    "opentuner>=0.8.8",
    "pydoe3>=1.0.5",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
