[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "runner"
path = "src/main.rs"

[dependencies]
rsp-client-executor = { git = "https://github.com/succinctlabs/rsp/", rev = "3647076" }
bincode = "1.3.3"
clap = { version = "4.5.31", features = ["derive"] }
cpuprofiler = "0.0.4"
criterion = { version = "0.5.1", features = ["html_reports"] }
mnist = { version = "0.6.0", features = ["download"] }
ndarray = "0.16.1"
risc0-zkvm = { version = "1.2.4", features = ["prove"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
sp1-core-executor = "4.1.4"
sp1-core-machine = "4.1.4"
sp1-prover = "4.1.4"
sp1-sdk = "4.1.4"
sp1-stark = "4.1.4"
rand = "0.8.5"
rand_core = "0.6.4"
k256 = { version = "=0.13.4", features = ["serde"] }
ed25519-dalek = { version = "2.1.1", features = ["digest", "rand_core", "serde", "signature"] }
indexmap = { version = "2.8.0", features = ["serde"] }
once_cell = "1.21.3"
sp1-cuda = "4.2.0"
libloading = "0.8.8"

[features]
cuda = ["risc0-zkvm/cuda"]
profiling = ["sp1-sdk/profiling"]
