[workspace]
[package]
name = "keccak256-x86"
version = "0.1.0"
edition = "2021"

[lib]
name = "keccak256x86"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.204", default-features = false, features = ["derive"] }
sha3 = { version = "0.10.8", default-features = false }

[features]
risc0 = []
sp1 = []
x86 = []
