[workspace]
[package]
name = "polybench-adi"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polybench-adi"
path = "src/main.rs"

[lib]
name = "polybenchadi"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sp1-zkvm = { version = "=4.1.1", optional = true }
risc0-zkvm = { version = "1.2.3", default-features = false, features = ["std"], optional = true}
polybench-rs = { path = "../polybench" }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
x86 = []