[workspace]
[package]
name = "polybench-ludcmp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "polybench-ludcmp"
path = "src/main.rs"

[lib]
name = "polybenchludcmp"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sp1-zkvm = { version = "=4.1.1", optional = true }
risc0-zkvm = { version = "1.2.3", default-features = false, features = ["std"], optional = true}
polybench-rs = { path = "../polybench" }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
x86 = []

