[workspace]
[package]
version = "0.1.0"
name = "sha3-bench"
edition = "2021"

[[bin]]
name = "sha3-bench"
path = "src/main.rs"

[lib]
name = "sha3bench"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
sp1-zkvm = { version = "=4.1.1", optional = true }
risc0-zkvm = { version = "1.2.3", default-features = false, features = ["std"], optional = true }
sha3 = { version = "0.10.8", default-features = false }

[features]
risc0 = ["dep:risc0-zkvm"]
sp1 = ["dep:sp1-zkvm"]
x86 = []
